fix(css): Fix justification and the gap to 5px

--- a/js_calculator/styles.css
+++ b/js_calculator/styles.css
@@ -51,6 +51,7 @@
 .function-keypad{
     display:flex;
     flex-direction: column;
+    justify-content: center;
     width:200px;
     height:500px;
     border: 2px solid white;
@@ -59,9 +60,8 @@
     border-bottom-left-radius: 0px;
     border-top-left-radius: 0px;
     padding:10px;
-    gap:10px;
+    gap:5px;
 }
-
 
 .function-key{
     display:flex;
